kubernetes/overlays/aws/deployment-reliability-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platform-lab
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: topology.kubernetes.io/zone
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app.kubernetes.io/name: platform-lab
              app.kubernetes.io/instance: platform-lab
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app.kubernetes.io/name: platform-lab
              app.kubernetes.io/instance: platform-lab
